--- a/index.html
+++ b/index.html
@@ -1,100 +1,75 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leonardo Vendramini</title>
+    <title>ML Importados</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header>
         <div class="logo">
-            <img src="./assets/images/LV-logo.png" alt="">
+            <img src="logo.png" alt="ML Importados">
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Início</a></li>
-                <li><a href="#properties">Imóveis</a></li>
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#contact">Contato</a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="./tenis.html">Tênis</a></li>
+                <li><a href="#camisas">Camisas</a></li>
+                <li><a href="#relogios">Relógios</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h2>Encontre seu imóvel aqui</h2>
-            <p>As melhores opções de imóveis exclusivos e sofisticados</p>
-            <a href="#properties" class="btn">Veja os imóveis</a>
+    <!-- Carrossel de Produtos -->
+    <section class="carousel">
+        <div class="carousel-item" style="background-image: url('./assets/images/Imagem\ do\ WhatsApp\ de\ 2025-02-03\ à\(s\)\ 14.29.49_1670cf02.jpg');">
+            <h2>Tênis em Destaque</h2>
+            <a href="#tenis">Veja mais</a>
+        </div>
+        <div class="carousel-item" style="background-image: url('./assets/images/Captura\ de\ tela\ 2025-02-03\ 143030.png');">
+            <h2>Camisas Exclusivas</h2>
+            <a href="#camisas">Veja mais</a>
+        </div>
+        <div class="carousel-item" style="background-image: url('./assets/images/Captura\ de\ tela\ 2025-02-03\ 143909.png');">
+            <h2>Relógios Elegantes</h2>
+            <a href="#relogios">Veja mais</a>
         </div>
     </section>
 
-    <section id="properties" class="properties">
-        <h2 class="section-title">Nossos Imóveis</h2>
-        <div class="property-list">
-            <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 1">
-                <div class="property-info">
-                    <h3>Apartamento 1</h3>
-                    <p>Localização privilegiada, 3 suítes, vista deslumbrante para o mar.</p>
-                    <span>R$ 5.000.000</span>
-                    <a href="#" class="btn">Ver mais</a>
-                </div>
+    <!-- Produtos em Destaque -->
+    <section class="destaques">
+        <h2>Produtos em Destaque</h2>
+        <div class="produtos">
+            <div class="produto">
+                <img src="./assets/images/Imagem do WhatsApp de 2025-02-03 à(s) 14.29.49_1670cf02.jpg" alt="Tênis">
+                <h3>Adidas Fórum</h3>
+                <p>R$ ###,##</p>
+                <a href="#">Adicionar ao Carrinho</a>
             </div>
-            <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 2">
-                <div class="property-info">
-                    <h3>Casa 2</h3>
-                    <p>Espaço amplo, piscina, design moderno e excelente localização.</p>
-                    <span>R$ 8.000.000</span>
-                    <a href="#" class="btn">Ver mais</a>
-                </div>
+            <div class="produto">
+                <img src="./assets/images/Captura de tela 2025-02-03 143030.png" alt="Camisa">
+                <h3>Camisa John John</h3>
+                <p>R$ ##,##</p>
+                <a href="#">Adicionar ao Carrinho</a>
             </div>
-            <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 3">
-                <div class="property-info">
-                    <h3>Casa 3</h3>
-                    <p>Casa de campo, arquitetura moderna e luxo em meio à natureza.</p>
-                    <span>R$ 12.000.000</span>
-                    <a href="#" class="btn">Ver mais</a>
-                </div>
+            <div class="produto">
+                <img src="./assets/images/Captura de tela 2025-02-03 143909.png" alt="Relógio">
+                <h3>W29 MAX COM TELA DE 2,1 POLEGADAS</h3>
+                <p>R$ 2.499,99</p>
+                <a href="#">Adicionar ao Carrinho</a>
             </div>
         </div>
     </section>
 
-    <section id="about" class="about">
-    <h2 class="section-title">Sobre Mim</h2>
-    <div class="about-content">
-        <div class="about-text">
-            <p>Sou um profissional apaixonado pelo mercado imobiliário, com uma trajetória construída em liderança, aprendizado constante e resultados sólidos. Atualmente, sou Coordenador de Vendas na CNB Imóveis, a imobiliária que mais admiro em Piracicaba-SP, onde estou há mais de dois anos. Aqui, pude alavancar minha experiência, trazendo comigo uma bagagem de 3,5 anos em uma das maiores construtoras do Brasil. Na CNB, tenho aprendido e contribuído com minha experiência, sempre alinhado ao conceito de "Dividir para Multiplicar", um valor que permeia todo o trabalho da empresa e que tem sido fundamental no meu desenvolvimento pessoal e profissional.
-
-              Antes de assumir a coordenação na CNB, fui Especialista Imobiliário também nessa mesma imobiliária, e Gerente de Vendas na Direcional Engenharia, onde tive a oportunidade de reestruturar operações em Piracicaba-SP, superando desafios e alcançando grandes aprendizados. Além disso, fui Coordenador de Vendas em Santa Bárbara d’Oeste e Rio Claro, o que me proporcionou uma experiência valiosa de liderança e a honra de participar do maior lançamento imobiliário de Rio Claro-SP.
-              
-              Meu foco é proporcionar a realização do sonho do primeiro imóvel para os clientes, seja por meio da consultoria, da negociação ou da liderança da equipe. Acredito que a transparência, a humildade e a competência são essenciais para alcançar o sucesso no setor imobiliário e, com isso, continuo em constante aprendizado para me aprimorar e entregar sempre o melhor para os meus clientes e para a minha equipe.</p>
-        </div>
-        <div class="about-image">
-            <img src="./assets/images/LeonardoVendramini.jpg" alt="Leonardo Vendramini">
-        </div>
-    </div>
-</section>
-
-    <section id="contact" class="contact">
-        <h2 class="section-title">Contato</h2>
-        <p>Entre em contato conosco para mais informações ou agendar uma visita.</p>
-        <form>
-            <input type="text" placeholder="Nome" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Mensagem" required></textarea>
-            <button type="submit" class="btn">Enviar</button>
-        </form>
-    </section>
-
+    <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Leonardo Vendramini | Todos os direitos reservados.</p>
-        <div class="footer-contacts">
-          <a href="https://www.instagram.com/leonardo.vendramini_/"><img src="./assets/images/instagram (1).png" alt="Instagram"></a>
-          <a href="https://www.linkedin.com/in/vendraminicontato/"><img src="./assets/images/linkedin.png" alt="linkedin"></a>
-        </div>
+        <p>&copy; 2025 ML Importados. Todos os direitos reservados.</p>
+        <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Serviço</a></p>
     </footer>
+
+    <script src="./src/script/script.js"></script>
 </body>
 </html>
