--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="section-title">Nossos Imóveis</h2>
         <div class="property-list">
             <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 1">
+                <img src="./src/images/apartamnento.jpg" alt="Imóvel 1">
                 <div class="property-info">
                     <h3>Apartamento 1</h3>
                     <p>Localização privilegiada, 3 suítes, vista deslumbrante para o mar.</p>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 2">
+                <img src="./src/images/casa luxuosa.jpg" alt="Imóvel 2">
                 <div class="property-info">
                     <h3>Casa 2</h3>
                     <p>Espaço amplo, piscina, design moderno e excelente localização.</p>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="property">
-                <img src="https://via.placeholder.com/400x300" alt="Imóvel 3">
+                <img src="./src/images/casa de campo.png" alt="Imóvel 3">
                 <div class="property-info">
                     <h3>Casa 3</h3>
                     <p>Casa de campo, arquitetura moderna e luxo em meio à natureza.</p>
